updating default links

--- a/templates/form.html
+++ b/templates/form.html
@@ -20,7 +20,6 @@
     }
     .wrapper iframe {
         position: absolute;
-        /*top: 0;*/
         left: 1%;
         width: 98%;
         height: 100%;
@@ -36,7 +35,7 @@
     upload file:
         <input type="file" name="file" id="file">
     or enter link to image:
-        <input type="text" name="imagelink" id="imagelink" value="https://i.ytimg.com/vi/SfLV8hD7zX4/maxresdefault.jpg">
+        <input type="text" name="imagelink" id="imagelink" value="https://raw.githubusercontent.com/kbrose/asciify/master/imgs/bridgehouse.png">
     <br><br>
 
     <label for="charwidth" style="display: inline-block; width: 20%">width (characters): </label>
